public update to fix url and css

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -6,14 +6,14 @@
 <title>Case Studies</title>
 <title>Be the Business | Prototype</title>
 
-<link rel="stylesheet" href="https://example.org/sass/main.min.css">
+<link rel="stylesheet" href="https://bilal-btb.github.io/sass/main.min.css">
 </head>
 
 <body>
     <header>
     <div class="header-container">
         <div class="left">
-            <a href="https://example.org/">
+            <a href="https://bilal-btb.github.io/">
                 <img src="/images/btb-logo.png" alt="BtB Logo" class="logo-img" />
             </a>
         </div>
@@ -41,7 +41,7 @@
       <img src="https://cdn.cosmicjs.com/0f955800-99b5-11ee-b62d-5b90a0a1bade-Vicasso_Visuals_Strive.width-1000.jpg">
       <div class="casestudy-listing-box-headline-div">
         <div>
-          <a href="https://example.org/case-studies/another-case-study/">I gained different perspectives from people who aren’t in my industry</a>
+          <a href="https://bilal-btb.github.io/case-studies/another-case-study/">I gained different perspectives from people who aren’t in my industry</a>
           <p>April 3, 2022</p>
         </div>
       </div>
@@ -51,7 +51,7 @@
       <img src="https://cdn.cosmicjs.com/39c48440-99b3-11ee-b62d-5b90a0a1bade-Yemi_1_Strive.width-1000.png">
       <div class="casestudy-listing-box-headline-div">
         <div>
-          <a href="https://example.org/case-studies/example-case-study/">My board helped me to turn my mission into a real business</a>
+          <a href="https://bilal-btb.github.io/case-studies/example-case-study/">My board helped me to turn my mission into a real business</a>
           <p>April 1, 2022</p>
         </div>
       </div>
